--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/common": "^5.11.3",
+    "@fullcalendar/react": "^5.11.2",
+    "@fullcalendar/timegrid": "^5.11.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -16,9 +19,11 @@
     "react-tabs": "^5.1.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
