--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@fullcalendar/common": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@web3uikit/core": "^0.1.8",
+    "ethers": "^5.7.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-tabs": "^5.1.0"
+    "react-moralis": "^1.4.2",
+    "react-tabs": "^5.1.0",
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
