--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/timegrid": "^5.11.3",
     "@web3uikit/core": "^0.1.8",
     "@web3uikit/web3": "^0.1.6",
+    "ethers": "^5.7.0",
     "moralis-v1": "^1.11.0",
     "next": "12.2.5",
     "react": "18.2.0",
