--- a/frontend/constants/networkMapping.json
+++ b/frontend/constants/networkMapping.json
@@ -1,1 +1,1 @@
-{}
+{"4":{"loveToken":["0x7CbCb10a941f8970aBd85D1a413d8edb4D6e3aE3","0x30Bb30fFE7703d697d9238ce2Ec4fe5be4F2CEf1"]},"31337":{"loveToken":["0x5FbDB2315678afecb367f032d93F642f64180aa3"]}}
