--- a/frontend/constants/networkMapping.json
+++ b/frontend/constants/networkMapping.json
@@ -1,1 +1,1 @@
-{"4":{"loveToken":["0x7CbCb10a941f8970aBd85D1a413d8edb4D6e3aE3","0x30Bb30fFE7703d697d9238ce2Ec4fe5be4F2CEf1"]},"31337":{"loveToken":["0x5FbDB2315678afecb367f032d93F642f64180aa3"]}}
+{"4":{"loveToken":["0x7CbCb10a941f8970aBd85D1a413d8edb4D6e3aE3","0x30Bb30fFE7703d697d9238ce2Ec4fe5be4F2CEf1","0x608FB8927133B55AE0E26555D89e8E5d122eE89E","0x7c972bdc87382c46c83A5fD5B39B8bf415e81bc1"]},"5":{"loveToken":["0x967890c4d1E1370d615B81e803136E4AB522631C"]},"31337":{"loveToken":["0x5FbDB2315678afecb367f032d93F642f64180aa3"]}}
