--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@fullcalendar/common": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
     "@web3uikit/core": "^0.1.8",
     "@web3uikit/web3": "^0.1.6",
     "ethers": "^5.7.0",
+    "graphql": "^16.6.0",
     "moralis-v1": "^1.11.0",
     "next": "12.2.5",
     "react": "18.2.0",
