--- a/graph/subgraph.yaml
+++ b/graph/subgraph.yaml
@@ -4,10 +4,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: LoveToken
-    network: rinkeby
+    network: goerli
     source:
-      address: "0x7CbCb10a941f8970aBd85D1a413d8edb4D6e3aE3"
+      address: "0x967890c4d1E1370d615B81e803136E4AB522631C"
       abi: LoveToken
+      startBlock: 7545588
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -19,6 +20,6 @@ dataSources:
         - name: LoveToken
           file: ./abis/LoveToken.json
       eventHandlers:
-        - event: NftMinted(indexed uint256,indexed uint256)
+        - event: NftMinted(indexed uint256,indexed uint256,string)
           handler: handleNftMinted
       file: ./src/love-token.ts
