--- a/graph/package.json
+++ b/graph/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "love-token-collections-v3",
+  "name": "lovetokengorliv7",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ love-token-collections-v3",
-    "create-local": "graph create --node http://localhost:8020/ love-token-collections-v3",
-    "remove-local": "graph remove --node http://localhost:8020/ love-token-collections-v3",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 love-token-collections-v3",
+    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ lovetokengorliv7",
+    "create-local": "graph create --node http://localhost:8020/ lovetokengorliv7",
+    "remove-local": "graph remove --node http://localhost:8020/ lovetokengorliv7",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 lovetokengorliv7",
     "test": "graph test"
   },
   "dependencies": {
