--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server.js --ext js,jsx,json",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,9 +13,14 @@
     "@fullcalendar/common": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
+    "@pinata/sdk": "^1.1.26",
     "@web3uikit/core": "^0.1.8",
     "@web3uikit/web3": "^0.1.6",
+    "compression": "^1.7.4",
+    "dotenv": "^16.0.2",
     "ethers": "^5.7.0",
+    "express": "^4.18.1",
+    "formidable": "^2.0.1",
     "graphql": "^16.6.0",
     "moralis-v1": "^1.11.0",
     "next": "12.2.5",
@@ -31,6 +36,7 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "next-transpile-modules": "^9.0.0",
+    "nodemon": "^2.0.19",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
