--- a/graph/subgraph.yaml
+++ b/graph/subgraph.yaml
@@ -6,20 +6,28 @@ dataSources:
     name: LoveToken
     network: goerli
     source:
-      address: "0x967890c4d1E1370d615B81e803136E4AB522631C"
+      address: "0x506a2a9475A32C3B3BD94d238149Fe9df483b8f4"
       abi: LoveToken
-      startBlock: 7545588
+      startBlock: 7577569
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
         - Collection
-        - NftMinted
+        - Token
       abis:
         - name: LoveToken
           file: ./abis/LoveToken.json
       eventHandlers:
-        - event: NftMinted(indexed uint256,indexed uint256,string)
+        - event: CollectionBurned(indexed uint256)
+          handler: handleCollectionBurned
+        - event: CollectionCreated(indexed uint256,indexed uint256,string,uint8,address)
+          handler: handleCollectionCreated
+        - event: LoverLinked(indexed address,indexed address,indexed uint256)
+          handler: handleLoverLinked
+        - event: NftMinted(indexed uint256,indexed uint256,indexed uint256,string[],string)
           handler: handleNftMinted
+        - event: Transfer(indexed address,indexed address,indexed uint256)
+          handler: handleTransfer
       file: ./src/love-token.ts
