--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "@fullcalendar/react": "^5.11.2",
     "@fullcalendar/timegrid": "^5.11.3",
     "@pinata/sdk": "^1.1.26",
+    "@rainbow-me/rainbowkit": "^0.5.3",
     "@web3uikit/core": "^0.1.8",
-    "@web3uikit/web3": "^0.1.6",
-    "ethers": "^5.7.0",
+    "ethers": "^5.7.1",
     "formidable": "^2.0.1",
     "graphql": "^16.6.0",
     "moralis-v1": "^1.11.0",
@@ -24,8 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-moralis": "^1.4.2",
-    "react-tabs": "^5.1.0"
+    "react-tabs": "^5.1.0",
+    "wagmi": "^0.6.6"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
