--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-moralis": "^1.4.2",
     "react-tabs": "^5.1.0",
     "wagmi": "^0.6.6"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.8",
+    "dotenv": "^16.0.2",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "next-transpile-modules": "^9.0.0",
