--- a/frontend/.env
+++ b/frontend/.env
@@ -5,12 +5,12 @@ NEXT_PUBLIC_SERVER_URL_MUMBAI=https://cayu6socrw8c.usemoralis.com:2053/server
 NEXT_PUBLIC_APP_ID_BSC=MMi5diNnbS2TWgWgvZY5hlrvXXjnJe86RnOx4FYQ
 NEXT_PUBLIC_SERVER_URL_BSC=https://eqigsrw0j462.usemoralis.com:2053/server
 
-moralisApiKey=cCxo7gLsnWUKFGc
-moralisApiSecret=xUZQahlakCI99ek
-chainId=97
-masterKey=nosQci0gWexE9oCWofIqglmAa7683BdB5jZnJqIi
+moralisApiKey_bsc=cCxo7gLsnWUKFGc
+moralisApiSecret_bsc=xUZQahlakCI99ek
+chainId_bsc=97
+masterKey_bsc=nosQci0gWexE9oCWofIqglmAa7683BdB5jZnJqIi
 
-moralisApiKey_mumbai=Qa66oUOv5d4z44f
-moralisApiSecret_mumbai=b7meNKLbHOexTyy
-chainId_mumbai=80001
-masterKey_mumbai=qQ3P9hMSP5PhKXHgaW65qo7VtAriYI8AMt0tlrgP
+moralisApiKey=Qa66oUOv5d4z44f
+moralisApiSecret=b7meNKLbHOexTyy
+chainId=80001
+masterKey=qQ3P9hMSP5PhKXHgaW65qo7VtAriYI8AMt0tlrgP
